--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^4.0.0",
     "bootstrap": "4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "ng-formly": "^1.0.0-rc.10",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
