--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@angular/cli": "1.0.0",
     "@angular/compiler-cli": "^4.0.0",
-    "@types/jasmine": "2.5.38",
+    "@types/jasmine": "^2.5.53",
     "@types/node": "^8.0.23",
     "codelyzer": "~2.0.0",
     "jasmine-core": "~2.5.2",
