--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "@types/jasmine": "^2.5.53",
     "@types/node": "^8.0.23",
     "codelyzer": "~2.0.0",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
+    "jasmine-core": "^2.7.0",
+    "jasmine-spec-reporter": "^4.2.1",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "~1.0.1",
