--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test --single-run --code-coverage",
-    "lint": "ng lint",
+    "lint": "ng lint --type-check",
     "e2e": "ng e2e"
   },
   "dependencies": {
@@ -30,7 +30,7 @@
     "@angular/compiler-cli": "^4.0.0",
     "@types/jasmine": "^2.5.53",
     "@types/node": "^8.0.23",
-    "codelyzer": "~2.0.0",
+    "codelyzer": "^3.1.2",
     "jasmine-core": "^2.7.0",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^1.7.0",
@@ -41,7 +41,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
-    "tslint": "~4.5.0",
+    "tslint": "^5.6.0",
     "typescript": "~2.2.0"
   }
 }
