--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "font-awesome": "^4.7.0",
     "ng-formly": "^1.0.0-rc.10",
     "rxjs": "^5.1.0",
+    "simple-line-icons": "^2.4.1",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
