--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "build": "ng build -prod -aot",
+    "test": "ng test --single-run --code-coverage",
+    "e2e": "ng e2e",
+    "lint": "npm-run-all lint:*",
+    "lint:ts": "ng lint --type-check",
+    "lint:scss": "stylelint src/*.scss src/**/*.scss src/**/**/*.scss"
+
   },
   "dependencies": {
     "@angular/common": "^4.0.0",
@@ -37,6 +40,7 @@
     "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "npm-run-all": "^4.1.1",
     "protractor": "~5.1.0",
     "stylelint": "^8.0.0",
     "stylelint-config-sass-guidelines": "^3.1.0",
