--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "lint": "npm-run-all lint:*",
     "lint:ts": "ng lint --type-check",
     "lint:scss": "stylelint src/*.scss src/**/*.scss src/**/**/*.scss"
-
   },
   "dependencies": {
     "@angular/common": "^4.0.0",
@@ -44,7 +43,7 @@
     "protractor": "~5.1.0",
     "stylelint": "^8.0.0",
     "stylelint-config-sass-guidelines": "^3.1.0",
-    "ts-node": "~2.0.0",
+    "ts-node": "^3.0.0",
     "tslint": "^5.6.0",
     "typescript": "~2.2.2"
   }
