--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.4",
     "bootstrap": "4.0.0-beta",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
