--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build -prod -aot",
     "test": "ng test --single-run --code-coverage",
     "e2e": "ng e2e",
     "lint": "npm-run-all lint:*",
     "lint:ts": "ng lint --type-check",
-    "lint:scss": "stylelint src/*.scss src/**/*.scss src/**/**/*.scss"
+    "lint:scss": "stylelint src/*.scss src/**/*.scss src/**/**/*.scss",
+    "postinstall": "ng build --aot -prod"
   },
   "dependencies": {
+    "@angular/cli": "^1.4.2",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
@@ -24,12 +26,12 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.4",
     "bootstrap": "4.0.0-beta",
     "core-js": "^2.4.1",
+    "express": "^4.15.4",
     "font-awesome": "^4.7.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "^1.4.2",
     "@angular/compiler-cli": "^4.0.0",
     "@types/jasmine": "^2.5.54",
     "@types/node": "^8.0.25",
@@ -49,5 +51,8 @@
     "ts-node": "^3.0.0",
     "tslint": "^5.6.0",
     "typescript": "~2.5.0"
+  },
+  "engines": {
+    "node": ">=8.2.1"
   }
 }
