--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.15.4",
     "font-awesome": "^4.7.0",
     "rxjs": "^5.1.0",
+    "typescript": "~2.3.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
@@ -49,8 +50,7 @@
     "stylelint": "^8.0.0",
     "stylelint-config-sass-guidelines": "^3.1.0",
     "ts-node": "^3.0.0",
-    "tslint": "^5.6.0",
-    "typescript": "~2.3.0"
+    "tslint": "^5.6.0"
   },
   "engines": {
     "node": ">=8.2.1"
