--- a/package.json
+++ b/package.json
@@ -48,9 +48,12 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "npm-run-all": "^4.1.1",
+    "postcss-sass": "^0.2.0",
     "protractor": "~5.1.0",
     "stylelint": "^8.0.0",
-    "stylelint-config-sass-guidelines": "^3.1.0",
+    "stylelint-config-sass-guidelines": "^4.0.1",
+    "stylelint-order": "^0.8.0",
+    "stylelint-scss": "^2.2.0",
     "ts-node": "^3.0.0",
     "tslint": "^5.6.0"
   },
