--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "tox-ngx",
   "version": "0.8.0",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dasrick/tox-ngx.git"
+  },
+  "bugs": {
+    "url": "https://github.com/dasrick/tox-ngx/issues"
+  },
+  "homepage": "https://github.com/dasrick/tox-ngx#readme",
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
@@ -38,7 +46,7 @@
   "devDependencies": {
     "@types/jasmine": "^2.5.54",
     "@types/node": "^8.0.25",
-    "codelyzer": "^3.1.2",
+    "codelyzer": "^4.0.1",
     "jasmine-core": "^2.8.0",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^1.7.0",
@@ -48,6 +56,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "npm-run-all": "^4.1.1",
+    "postcss": "^6.0.14",
     "postcss-sass": "^0.2.0",
     "protractor": "~5.1.0",
     "stylelint": "^8.0.0",
