--- a/package.json
+++ b/package.json
@@ -23,24 +23,24 @@
   },
   "dependencies": {
     "@angular/cli": "^1.4.2",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.4",
-    "@ngx-translate/core": "^8.0.0",
+    "@angular/common": "^5.0.5",
+    "@angular/compiler": "^5.0.5",
+    "@angular/compiler-cli": "^5.0.5",
+    "@angular/core": "^5.0.5",
+    "@angular/forms": "^5.0.5",
+    "@angular/http": "^5.0.5",
+    "@angular/platform-browser": "^5.0.5",
+    "@angular/platform-browser-dynamic": "^5.0.5",
+    "@angular/router": "^5.0.5",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.6",
+    "@ngx-translate/core": "^9.0.1",
     "@ngx-translate/http-loader": "^2.0.0",
     "bootstrap": "4.0.0-beta",
     "core-js": "^2.4.1",
     "express": "^4.15.4",
     "font-awesome": "^4.7.0",
     "rxjs": "^5.5.5",
-    "typescript": "~2.3.0",
+    "typescript": "2.4.2",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
