update travis.yml - add new group settings (lts of used dist image)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
-sudo: false
+# https://docs.travis-ci.com/user/reference/overview/
 dist: trusty
+group: travis_lts
+sudo: false
 language: node_js
 node_js:
 - '6'
